<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="wycliffe.com.bdf.other.Login">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <!-- adding the toolbar -->
        <LinearLayout
            android:id="@+id/toolLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <!--<include-->
            <!--android:id="@+id/toolbar"-->
            <!--layout="@layout/toolbar" /> -->

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_blood" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="BLOOD DONOR FINDER"
                android:textStyle="italic" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolLayout"
            android:background="#fff"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="false"
                        android:layout_marginTop="50dp"
                        android:ems="10"
                        android:hint="@string/hint_email"

                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/input_layout_email"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/etEmail"
                        android:layout_alignEnd="@+id/etEmail"
                        android:layout_alignRight="@+id/etEmail"
                        android:layout_marginTop="60dp"
                        android:ems="10"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword" />


                </com.google.android.material.textfield.TextInputLayout>


                <CheckBox
                    android:id="@+id/showPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_layout_password"
                    android:layout_marginTop="13dp"
                    android:checked="false"
                    android:text="@string/showPassword" />


                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/showPassword"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorPrimary"
                    android:singleLine="true"
                    android:text="LOGIN"
                    android:textColor="#fff" />



                <Button
                    android:id="@+id/btnToRegister"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/buttonLogin"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="5dp"
                    android:background="#fff"
                    android:text="Not registered? CLICK HERE"
                    android:textAllCaps="false"
                    android:textSize="15sp" />

                <com.baoyachi.stepview.HorizontalStepView
                    android:id="@+id/step_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_centerInParent="true"
                    android:layout_below="@+id/btnToRegister"
                    android:visibility="gone"
                    />

            </RelativeLayout>
        </FrameLayout>
    </RelativeLayout>

</ScrollView>