...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff">


                    <Button
                        android:id="@+id/recommendButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/donorText"
                        android:layout_gravity="center_vertical"
                        android:background="@color/colorPrimary"
                        android:text="Generate"
                        android:textColor="#fff"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        />

                    <ListView
                        android:layout_width="match_parent"
...
